Bug 491231 - Memory Profiler cleanup times part-II from review of profiler [r=treilly+]